# MatrixC

./: CMakeLists.txt  README.md
include/: VMMath.h  initMatrix.h  matrix.h  matrixMath.h  matrixOpenGL.h  matrixTransform.h  vectorMath.h
src/: VMMath.c  initMatrix.c  matrixMath.c  matrixOpenGL.c  matrixTransform.c  vectorMath.c
